test/testzillians-compiler/ThorScriptCompilerStaticTest/data/error/4_parameter/UNEXPECTED_VARIADIC_PARAM.t
@static_test { expect_message={ level="LEVEL_ERROR", id="UNEXPECTED_VARIADIC_PARAM" } }
function f(a:..., b:uint32):void
{
}
